--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.dejqit.detectoreventdemo"
-        minSdkVersion 23
+        minSdkVersion 27
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -71,6 +71,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
 
     implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.2.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
